--- a/css/main.css
+++ b/css/main.css
@@ -6,4 +6,20 @@
   list-style: none;
   outline: none;
   border: none;
+}
+
+nav {
+  width: 100%;
+  height: 100px;
+}
+
+main {
+  background-color: #FFEFE7;
+  padding: 0 20px;
+}
+
+footer {
+  background-color: #FA9500;
+  width: 100%;
+  height: 250px;
 }/*# sourceMappingURL=main.css.map */
