--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,9 @@
+$primary-color: #FFEFE7;
+$secondary-color: #FFDAC6;
+$tertiary-color: #BABD8D;
+$primary-text-color: #7C6A0A;
+$font-stack: 'IBM Plex Sans', sans-serif;
+
 * {
     margin: 0;
     padding: 0;
@@ -5,4 +11,21 @@
     text-decoration: none;
     list-style: none;
     outline: none; border: none;
+}
+
+nav {
+    width: 100%;
+    height: 100px;
+}
+
+main {
+    background-color: $primary-color;
+    padding: 0 20px;
+}
+
+footer {
+    $background: #FA9500;
+    background-color: $background;
+    width: 100%;
+    height: 250px;
 }
