--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,7 +2,10 @@ $primary-color: #FFEFE7;
 $secondary-color: #FFDAC6;
 $tertiary-color: #BABD8D;
 $primary-text-color: #7C6A0A;
+$quaternary-color: #FA9500;
 $font-stack: 'IBM Plex Sans', sans-serif;
+$paragraph-size: 1.5em;
+
 
 * {
     margin: 0;
@@ -10,22 +13,217 @@ $font-stack: 'IBM Plex Sans', sans-serif;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    outline: none; border: none;
+    outline: none; border-style: none;
+}
+
+@mixin flexCenter($direction, $content, $align){
+    display: flex;
+    flex-direction: $direction;
+    justify-content: $content;
+    align-items: $align;
+}
+
+@mixin buttonStyle {
+    button {
+        background: none;
+    }
+}
+
+body {
+    background-color: $primary-color;
+    font-family: $font-stack;
 }
 
 nav {
-    width: 100%;
-    height: 100px;
+    width: auto;
+    display: flex;
+    @include flexCenter(row, space-between, center);
+    padding: 15px;
+    p {
+        font-size: $paragraph-size;
+        padding-left: 30px;
+        cursor: pointer;
+    }
+    .icons {
+        display: flex;
+        gap: 15px;
+        @include buttonStyle;
+    }
 }
 
-main {
-    background-color: $primary-color;
-    padding: 0 20px;
+article {
+    width: auto;
+    color: $primary-text-color;
+    @include flexCenter(row, space-between, center);
+    padding: 0 45px;
+    padding-top: 70px;
+    .impact-section {
+        @include flexCenter(column, space-evenly, flex-start);
+        gap: 25px;
+        padding-top: 50px;
+    }
+    h1 {
+        font-size: 3em;
+    }
+    p {
+        font-size: $paragraph-size;
+    }
+    @include buttonStyle;
+    button {
+        width: 12vw;
+        cursor: pointer;
+        padding: 20px;
+        background-color: $quaternary-color;
+        border-radius: 35px;
+        color: white;
+        font-size: 1em;
+        &:hover {
+            transform: scale(1.1);
+        }
+    }
+     img {
+        width: 25vw;
+        border-radius: 19px;
+    }
+}
+
+section {
+    width: auto;
+    height: auto;
+    padding: 45px;
+    h2 {
+        color: $primary-text-color;
+        font-size: 2em;
+    }
+    .healthcare {
+        padding-bottom: 60px;
+        h2 {
+            font-weight: 300;
+            padding-bottom: 60px;
+        }
+        .card-section {
+            @include flexCenter(row, space-evenly, center);
+            width: auto;
+            height: auto;
+            flex-wrap: wrap;
+            column-gap: 200px;
+            row-gap: 80px;
+        }
+        .product-card {
+            width: 14vw;
+            height: 45vh;
+            background-color: $secondary-color;
+            color: $primary-text-color;
+            padding: 20px;
+            border-radius: 8px;
+            .icon {
+                width: 100%;
+                display: flex;
+                justify-content: flex-end;
+                padding-bottom: 12px;
+                svg {
+                    width: 28px;
+                    height: 28;
+                    cursor: pointer;
+                }
+            }
+            .product-image {
+                width: 100%;
+                height: auto;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img {
+                    width: 12vw;
+                    height: 30vh;
+                    background-size: cover;
+                    border-radius: 6px;
+                }
+            }  
+        }
+    }
+    .furniture {
+        @extend .healthcare;
+        .product-card {
+            background-color: $tertiary-color;
+            color: white;
+        }
+    }
+}
+
+.about-us {
+    padding-top: 80px;
+    padding-bottom: 80px;
+    h2 {
+        font-weight: bold;
+        padding-bottom: 60px;
+    }
+    .mission-section {
+        @include flexCenter(row, space-evenly, center);
+        .earth {
+            $text-color: #e86424;
+            width: 30vw;
+            display: flex;
+            gap: 40px;
+            color: $text-color;
+            img {
+                background-size: contain;
+            }
+            p {
+                text-align: center;
+                font-size: $paragraph-size;
+            }
+        }
+    }
+    .innovation {
+        @extend .earth;
+    }
+}
+
+.gallery {
+    h2 {
+        font-weight: bold;
+    }
+    .gallery-images {
+        padding: 80px 0;
+        @include flexCenter(row, space-between, center);
+        img {
+            width: 28vw;
+            height: 45vh;
+            background-size: cover;
+            border-radius: 16px;
+            background-position: 5px 35%;
+            &:hover {
+                transform: scale(1.1);
+            }
+        }
+    }
+}
+
+.location {
+    $text-color: #e86424;
+    color: $text-color;
+    .map {
+        @include flexCenter(row, center, center);
+        padding: 80px 0;
+        img {
+            background-size: cover;
+        }
+    }
+    h3, p {
+        font-size: $paragraph-size;
+    }
 }
 
 footer {
-    $background: #FA9500;
-    background-color: $background;
+    background-color: $quaternary-color;
     width: 100%;
-    height: 250px;
+    height: auto;
+    padding: 40px;
+    color: white;
+    .social-media {
+        @include flexCenter(row, center, center);
+        gap: 40px;
+        padding-bottom: 40px;
+    }
 }
